--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^3.2.2-rc.1",
     "next": "^10.0.0",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-lottie": "^1.2.3",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {}
